--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
@@ -19,9 +19,6 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_8">
     <item>
-     <widget class="QGraphicsView" name="graphicsView"/>
-    </item>
-    <item>
      <widget class="QTabWidget" name="AnalysisTabs">
       <property name="maximumSize">
        <size>
@@ -2747,7 +2744,7 @@ Panel  for Member:</string>
                <bool>true</bool>
               </property>
               <attribute name="horizontalHeaderDefaultSectionSize">
-               <number>125</number>
+               <number>150</number>
               </attribute>
               <row>
                <property name="text">
@@ -2756,7 +2753,7 @@ Panel  for Member:</string>
               </row>
               <column>
                <property name="text">
-                <string>Segment Name</string>
+                <string>Member / Segment #</string>
                </property>
                <property name="font">
                 <font>
@@ -2767,18 +2764,7 @@ Panel  for Member:</string>
               </column>
               <column>
                <property name="text">
-                <string>Load Type</string>
-               </property>
-               <property name="font">
-                <font>
-                 <weight>75</weight>
-                 <bold>true</bold>
-                </font>
-               </property>
-              </column>
-              <column>
-               <property name="text">
-                <string>Load Height</string>
+                <string>Load Combination Name</string>
                </property>
                <property name="font">
                 <font>
@@ -2822,7 +2808,7 @@ Panel  for Member:</string>
               </column>
               <item row="0" column="0">
                <property name="text">
-                <string>M1S1</string>
+                <string>1</string>
                </property>
                <property name="textAlignment">
                 <set>AlignCenter</set>
@@ -2830,33 +2816,117 @@ Panel  for Member:</string>
               </item>
               <item row="0" column="1">
                <property name="text">
-                <string>0</string>
+                <string/>
                </property>
                <property name="flags">
                 <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsDropEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
                </property>
               </item>
-              <item row="0" column="2">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
-              <item row="0" column="3">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
-              <item row="0" column="4">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
-              <item row="0" column="5">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
              </widget>
+            </item>
+            <item>
+             <layout class="QGridLayout" name="gridLayout_16">
+              <item row="1" column="0">
+               <widget class="QPushButton" name="Delete_last_row_uni_load">
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>200</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Delete Last 
+ Row</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QPushButton" name="Delete_new_row_button_uni_load">
+                <property name="maximumSize">
+                 <size>
+                  <width>150</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Delete Row 
+Number</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QPushButton" name="Insert_new_row_button_uni_load">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>150</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Insert a New 
+ Row After</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QPushButton" name="Add_new_row_uni_load">
+                <property name="maximumSize">
+                 <size>
+                  <width>200</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Add New
+ Row</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="Inser_number_uni_load">
+                <property name="maximumSize">
+                 <size>
+                  <width>50</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="layoutDirection">
+                 <enum>Qt::LeftToRight</enum>
+                </property>
+                <property name="text">
+                 <string>2</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QLineEdit" name="Delete_number_uni_load">
+                <property name="maximumSize">
+                 <size>
+                  <width>50</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>2</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
             <item>
              <spacer name="horizontalSpacer_10">
@@ -3021,32 +3091,9 @@ Panel  for Member:</string>
                 </font>
                </property>
               </column>
-              <item row="0" column="0">
-               <property name="text">
-                <string>1</string>
-               </property>
-               <property name="font">
-                <font>
-                 <pointsize>8</pointsize>
-                 <weight>50</weight>
-                 <bold>false</bold>
-                </font>
-               </property>
-               <property name="textAlignment">
-                <set>AlignCenter</set>
-               </property>
-               <property name="flags">
-                <set>ItemIsDragEnabled|ItemIsUserCheckable</set>
-               </property>
-              </item>
-              <item row="0" column="1">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
               <item row="0" column="2">
                <property name="text">
-                <string>0</string>
+                <string/>
                </property>
               </item>
               <item row="0" column="3">
@@ -3057,50 +3104,111 @@ Panel  for Member:</string>
                 <set>AlignCenter</set>
                </property>
               </item>
-              <item row="0" column="4">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
-              <item row="0" column="5">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
-              <item row="0" column="6">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
-              <item row="0" column="7">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
-              <item row="0" column="8">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
-              <item row="0" column="9">
-               <property name="text">
-                <string>0</string>
-               </property>
-              </item>
              </widget>
             </item>
             <item>
-             <spacer name="horizontalSpacer_6">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
+             <layout class="QGridLayout" name="gridLayout_11">
+              <item row="1" column="0">
+               <widget class="QPushButton" name="Delete_last_row_point_load">
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>200</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Delete Last 
+ Row</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QPushButton" name="Delete_new_row_button_point_load">
+                <property name="maximumSize">
+                 <size>
+                  <width>150</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Delete Row 
+Number</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QPushButton" name="Insert_new_row_button_point_load">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>150</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Insert a New 
+ Row After</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QPushButton" name="Add_new_row_point_load">
+                <property name="maximumSize">
+                 <size>
+                  <width>200</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Add New
+ Row</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="Inser_number_point_load">
+                <property name="maximumSize">
+                 <size>
+                  <width>50</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="layoutDirection">
+                 <enum>Qt::LeftToRight</enum>
+                </property>
+                <property name="text">
+                 <string>2</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QLineEdit" name="Delete_number_point_load">
+                <property name="maximumSize">
+                 <size>
+                  <width>50</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>2</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </widget>
